<resources>
    <string name="app_name">피카북</string>
    <string name="binding_error">Binding not initialized to reference the view.</string>
    <string name="finish_app_toast_msg">뒤로가기를 한 번 더 누르면 종료됩니다</string>
    <string name="null_point_exception">NullPointException occurs..</string>
    <string name="null_point_exception_warning_dialog_argument">"WarningDialogFragment에 필요한 arguments에 안들어옴"</string>
    <string name="refresh_error">자동로그인이 만료되었습니다. 다시 로그인해주시기 바랍니다.</string>
    <string name="sever_500_error_msg">정보를 불러오는 데 실패했어요.</string>
    <string name="onboarding_next">내 책장 만들러 가기</string>
    <string name="social_login_inform_agreement">가입 시, PEEKABOOK의 다음 사항에 동의하는 것으로 간주합니다.</string>
    <string name="social_login_terms_of_service">서비스 이용약관</string>
    <string name="social_login_and">및</string>
    <string name="social_login_privacy_policy">개인정보 정책</string>
    <string name="social_login_terms_of_service_link">https://interesting-door-b57.notion.site/fcb373d7e53642cfb011bf36ef47b131</string>
    <string name="social_login_privacy_policy_link">https://interesting-door-b57.notion.site/0875e3fa416042e7b0e5c4f556fdc2c3</string>
    <string name="barcode_permission">휴대폰 앱 설정에서 카메라 권한을 허용해주세요!</string>
    <string name="barcode_title">책 검색하기</string>
    <string name="barcode_guide">책의 뒷면에 있는 ISBN 바코드가\n사각형 안에 들어오게 해주세요.</string>
    <string name="barcode_error">존재하지 않는 책입니다</string>
    <string name="barcode_error_search">텍스트로 검색하기</string>
    <string name="bottom_bookshelf">책장</string>
    <string name="bottom_recommend">추천</string>
    <string name="bottom_my_page">MY</string>
    <string name="book_comment">한 마디</string>
    <string name="book_memo">메모</string>
    <string name="book_comment_hint">책을 읽고 느낀 점, 좋았던 구절을 적어보세요.</string>
    <string name="book_memo_hint">메모에 적은 내용은 나만 볼 수 있어요.\nex) 7/3~7/10 완독, 두두에게 선물 받음</string>
    <string name="book_comment_count">%d/200</string>
    <string name="book_memo_count">%d/50</string>
    <string name="create_book_title">책 등록하기</string>
    <string name="edit_book_title">책 수정하기</string>
    <string name="detail_description_empty">작성된 한 마디가 없습니다</string>
    <string name="detail_memo_empty">작성된 메모가 없습니다</string>
    <string name="bookshelf_pick">PICK !</string>
    <string name="bookshelf_modify_pick">픽 수정하기</string>
    <string name="bookshelf_recommend_book">책 추천하기</string>
    <string name="bookshelf_myshelf_title">%d Books</string>
    <string name="bookshelf_pick_index">%d</string>
    <string name="bookshelf_pick_empty_my">잠깐! PICK 한 책이 없어요.\nPICK 수정하기 버튼을 눌러\n추천하고 싶은 책을 PICK 해보세요!</string>
    <string name="bookshelf_pick_empty_friend">앗! 친구가 Pick한 책이 없어요.\n책 추천하기 버튼을 눌러\n친구에게 책을 추천 해보세요!</string>
    <string name="bookshelf_empty_friend_list">친구추가 버튼을 눌러 친구를 추가해보세요!</string>
    <string name="bookshelf_bottom_view_empty_my">아직 책장에 책이 없어요.\n+버튼을 눌러 좋아하는 책을 추가해볼까요?</string>
    <string name="bookshelf_bottom_view_empty_friend">친구 책장이 텅 비어있어요!</string>
    <string name="bookshelf_bottom_sheet_unfollow">언팔로우</string>
    <string name="bookshelf_bottom_sheet_report">신고</string>
    <string name="bookshelf_bottom_sheet_block">차단</string>
    <string name="bookshelf_dialog_block_title">%s님을 차단하시겠어요?</string>
    <string name="bookshelf_dialog_block_content">서로에게 추천한 책이 삭제되며,\n서로의 프로필을 볼 수 없게 돼요.</string>
    <string name="bookshelf_dialog_block">차단하기</string>
    <string name="bookshelf_dialog_cancel">취소하기</string>
    <string name="notification_bookshelf_pick">PICK !</string>
    <string name="notification_bookshelf_follow">팔로우 하기</string>
    <string name="notification_bookshelf_recommend_book">책 추천하기</string>
    <string name="notification_bookshelf_myshelf_title">%d Books</string>
    <string name="notification_bookshelf_pick_index">%d</string>
    <string name="notification_bookshelf_pick_empty_friend">앗! 친구가 Pick한 책이 없어요.\n책 추천하기 버튼을 눌러\n친구에게 책을 추천 해보세요!</string>
    <string name="notification_bookshelf_bottom_view_empty_friend">친구 책장이 텅 비어있어요!</string>
    <string name="notification_bookshelf_bottom_sheet_unfollow">언팔로우</string>
    <string name="notification_bookshelf_bottom_sheet_report">신고</string>
    <string name="notification_bookshelf_bottom_sheet_block">차단</string>
    <string name="notification_bookshelf_dialog_block_title">%s님을 차단하시겠어요?</string>
    <string name="notification_bookshelf_dialog_block_content">서로에게 추천한 책이 삭제되며,\n서로의 프로필을 볼 수 없게 돼요.</string>
    <string name="notification_bookshelf_dialog_block">차단하기</string>
    <string name="notification_bookshelf_dialog_cancel">취소하기</string>
    <string name="notification_bookshelf_dialog_follow_content">\'%s\'님과 친구가 되었어요.</string>
    <string name="notification_bookshelf_dialog_follow_confirm">확인</string>
    <string name="recommend_recommended">추천받은 책</string>
    <string name="recommend_recommending">추천한 책</string>
    <string name="recommend_edit">수정하기</string>
    <string name="recommend_complete">완료</string>
    <string name="recommend_item_peek">%s님의 책장 보러가기 →</string>
    <string name="recommend_recommended_empty">아직 친구가 추천해준 책이 없네요.\n친구와 함께 읽을 책을 공유해보세요.</string>
    <string name="recommend_recommending_empty">친구에게 추천해준 책이 없네요.\n친구와 함께 읽을 책을 공유해보세요.</string>
    <string name="recommend_recommended_delete_dialog_title">추천받은 책을 삭제하시겠어요?</string>
    <string name="recommend_recommending_delete_dialog_title">추천한 책을 삭제하시겠어요?</string>
    <string name="recommend_recommended_delete_dialog_content">나에게 추천해준 사용자의 추천 내역에서도 사라지며,\n삭제 후에는 되돌릴 수 없어요.</string>
    <string name="recommend_recommending_delete_dialog_content">추천받은 사용자의 추천 내역에서도 사라지며,\n삭제 후에는 되돌릴 수 없어요.</string>
    <string name="my_page_name">북과픽</string>
    <string name="my_page_intro">안녕하세요. 저는 북과픽입니다.</string>
    <string name="my_page_notification">알림 설정</string>
    <string name="my_page_block">차단사용자 관리하기</string>
    <string name="my_page_policy"><![CDATA[개인정보 보호 정책 & 서비스 이용 약관]]></string>
    <string name="my_page_ask">문의하기</string>
    <string name="my_page_info">개발자 정보</string>
    <string name="my_page_open_source">오픈소스 라이선스</string>
    <string name="my_page_logout">로그아웃</string>
    <string name="my_page_withdraw">서비스 탈퇴하기</string>
    <string name="my_page_developer_info_link">https://interesting-door-b57.notion.site/About-Team-b25424073add46b9a186d69c17815bf2</string>
    <string name="my_page_policy_link">https://interesting-door-b57.notion.site/d00db57d23414511ad8ec1f2f24c230a</string>
    <string name="my_page_ask_link">https://walla.my/survey/inPmakCKv1iE39DMrg8Z</string>
    <string name="my_page_28_donot_modify">해당 기기에서는 지원하지 않는 기능입니다</string>
    <string name="recommendation_book_comment_count">%d/200</string>
    <string name="recommendation_hint">추천사를 적어주세요.</string>
    <string name="recommendation_to_name">받는 사람</string>
    <string name="tv_recommendation_title">책 추천하기</string>
    <string name="pick_modify_notice">최대 3개까지 선택 가능해요.</string>
    <string name="pick_modify_index">%d</string>
    <string name="search_book_title">책 검색하기</string>
    <string name="search_book_hint">책 제목을 입력해주세요.</string>
    <string name="search_book_add">내 책장에 추가하기</string>
    <string name="search_book_recommend">친구에게 추천하기</string>
    <string name="search_book_error">앗! 검색어에 해당되는 책이 없는 것 같아요.\n다른 검색어를 입력해 보세요.</string>
    <string name="notification_follow_name_short">\'%s\' 님이 당신을 팔로우했어요!</string>
    <string name="notification_follow_name_long">\'%s\' 님이\n당신을 팔로우했어요!</string>
    <string name="notification_recommend">\'%s\'님이\n당신에게 책을 추천했어요!</string>
    <string name="notification_add">\'%s\'님의\n책장에 새로운 책이 추가되었어요!</string>
    <string name="notification_title">알림</string>
    <string name="notification_empty">새로운 알림이 없습니다.</string>
    <string name="search_user_title">사용자 검색하기</string>
    <string name="search_user_hint">사용자의 닉네임을 입력해주세요.</string>
    <string name="search_user_error">앗! 해당 사용자가 존재하지 않는 것 같아요.\n다른 검색어를 입력해 보세요.</string>
    <string name="search_user_following">팔로잉</string>
    <string name="search_user_follow">팔로우</string>
    <string name="search_user_unblock">차단 해제</string>
    <string name="warning_dialog_recommend_title">%s님에게\n책을 추천하시겠어요?</string>
    <string name="warning_dialog_delete_follower_title">%s님을\n정말 삭제하시겠어요?</string>
    <string name="warning_dialog_delete_book_title">해당 책을\n정말 삭제하시겠습니까?</string>
    <string name="warning_dialog_unfollow_title">%s님을\n 언팔로우 하시겠어요?</string>
    <string name="warning_dialog_duplicate_book">이미 내 책장에 있는 도서예요.\n하나 더 추가하시겠어요?</string>
    <string name="warning_dialog_cancel">취소하기</string>
    <string name="warning_dialog_recommend">추천하기</string>
    <string name="warning_dialog_delete">삭제하기</string>
    <string name="warning_dialog_unfollow">언팔로우</string>
    <string name="warning_dialog_add">추가하기</string>
    <string name="block_title">차단된 계정</string>
    <string name="block_cancel">차단 해제</string>
    <string name="block_dialog_delete_title">%s님을 차단 해제하시겠어요?</string>
    <string name="block_dialog_delete_content">이제 서로에게 책을 추천할 수 있으며,\n서로의 프로필을 볼 수 있게 됩니다.</string>
    <string name="report_title">사용자 신고하기</string>
    <string name="report_reason">신고 사유 선택</string>
    <string name="report_inadequate">부적절한 게시물</string>
    <string name="report_curse">욕설 및 비하 발언</string>
    <string name="report_promote">홍보성 컨텐츠</string>
    <string name="report_nickname">닉네임 신고</string>
    <string name="report_etc">기타</string>
    <string name="report_detail_reason">구체적인 신고 사유를 작성해 주세요.</string>
    <string name="report_confirm">신고하신 내용은 검토 후 빠른 시일 내 조치하겠습니다.</string>
    <string name="report_report">신고하기</string>
    <string name="report_dialog_confirm">신고가 정상적으로 접수되었습니다.</string>
    <string name="report_dialog_home">홈으로 돌아가기</string>
    <string name="user_input_navigation_bar">회원 정보 입력</string>
    <string name="user_input_nickname">닉네임</string>
    <string name="user_input_nickname_hint">닉네임은 6자까지 쓸 수 있어요!</string>
    <string name="user_input_nickname_count">\%d\/6</string>
    <string name="user_input_duplication_check">중복확인</string>
    <string name="user_input_unavailable_nickname_message">이미 사용 중인 닉네임 입니다</string>
    <string name="user_input_available_nickname_message">사용 가능한 닉네임 입니다</string>
    <string name="user_input_introduce">한 줄 소개</string>
    <string name="user_input_introduce_hint">한 줄 소개는 40자까지 쓸 수 있어요!</string>
    <string name="user_input_introduce_count">\%d\/40</string>
    <string name="user_input_duplication_notify_message">닉네임 중복확인을 해주세요</string>
    <string name="user_input_check_button">확인</string>
    <string name="user_input_choose_album">앨범에서 선택</string>
    <string name="user_input_camera">카메라</string>
    <string name="user_input_basic_image">기본 이미지로 변경</string>
    <string name="user_input_request_permission">휴대폰 앱 설정에서 카메라, 내부 저장소 권한을 허용해주세요!</string>
    <string name="user_input_permission">카메라, 내부 저장소 권한이 허용됐습니다.</string>
    <string name="user_input_regular_expression">한글, 영어, 숫자만 입력 가능합니다.</string>
    <string name="profile_modify_nickname">닉네임</string>
    <string name="profile_modify_title">프로필 수정</string>
    <string name="profile_modify_duplication">중복확인</string>
    <string name="profile_modify_introduce">한 줄 소개</string>
    <string name="profile_modify_check">확인</string>
    <string name="profile_modify_nickname_count">%d/6</string>
    <string name="profile_modify_introduce_count">%d/40</string>
    <string name="profile_modify_album">앨범에서 선택</string>
    <string name="profile_modify_camera">카메라</string>
    <string name="profile_modify_delete">프로필 사진 삭제</string>
    <string name="withdraw_title">서비스 탈퇴</string>
    <string name="withdraw_content">서비스 탈퇴 시,\n사용자의 데이터는 복구되지 않습니다.\n사용자의 개인 정보는 \‘개인정보 보호방침\'에 따라\n일정 기간 보관 후 파기됩니다. </string>
    <string name="withdraw_confirm">탈퇴하기</string>
    <string name="withdraw_dialog_title">서비스 탈퇴 완료</string>
    <string name="withdraw_dialog_content">이용해주셔서 감사합니다.</string>
    <string name="withdraw_dialog_confirm">확인</string>
    <string name="logout_dialog_title">로그아웃 하시겠습니까?</string>
    <string name="logout_dialog_confirm">로그아웃</string>
</resources>