<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vm"
            type="com.sopt.peekabookaos.presentation.withdraw.WithdrawViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/peeka_beige">

        <TextView
            android:id="@+id/tv_withdraw_dialog_title"
            style="@style/NameBd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:text="@string/withdraw_dialog_title"
            android:textColor="@color/peeka_red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_withdraw_dialog_content"
            style="@style/H2Md"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/withdraw_dialog_content"
            android:textColor="@color/peeka_red"
            app:layout_constraintEnd_toEndOf="@id/tv_withdraw_dialog_title"
            app:layout_constraintStart_toStartOf="@id/tv_withdraw_dialog_title"
            app:layout_constraintTop_toBottomOf="@id/tv_withdraw_dialog_title" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_withdraw_dialog_confirm"
            style="@style/H1Bd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="14dp"
            android:background="@color/peeka_red"
            android:paddingVertical="9dp"
            android:text="@string/withdraw_dialog_confirm"
            android:textColor="@color/peeka_white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_withdraw_dialog_content" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>