<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/peeka_beige">

        <TextView
            android:id="@+id/tv_logout_dialog_title"
            style="@style/H1Bd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="70dp"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:text="@string/logout_dialog_title"
            android:textColor="@color/peeka_red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_logout_dialog_cancel"
            style="@style/H2Md"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="7dp"
            android:layout_marginBottom="16dp"
            android:background="@color/peeka_g_2"
            android:paddingHorizontal="34dp"
            android:paddingVertical="10dp"
            android:text="@string/warning_dialog_cancel"
            android:textColor="@color/peeka_white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_logout_dialog_confirm"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_logout_dialog_title" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_logout_dialog_confirm"
            style="H1Bd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:background="@color/peeka_red"
            android:paddingHorizontal="34dp"
            android:paddingVertical="10dp"
            android:text="@string/logout_dialog_confirm"
            android:textColor="@color/peeka_white"
            app:layout_constraintBottom_toBottomOf="@id/btn_logout_dialog_cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_logout_dialog_cancel"
            app:layout_constraintTop_toTopOf="@id/btn_logout_dialog_cancel" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>