<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_white_fill_20_rect"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <TextView
        android:id="@+id/tv_profile_modify_bottom_sheet_album"
        style="@style/H2Md"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="19dp"
        android:layout_marginTop="18dp"
        android:gravity="center"
        android:text="@string/profile_modify_album"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view_profile_modify_bottom_sheet_1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="19dp"
        android:layout_marginTop="18dp"
        android:background="@color/peeka_g_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_profile_modify_bottom_sheet_album" />

    <TextView
        android:id="@+id/tv_profile_modify_bottom_sheet_camera"
        style="@style/H2Md"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="19dp"
        android:layout_marginVertical="18dp"
        android:gravity="center"
        android:text="@string/profile_modify_camera"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/view_profile_modify_bottom_sheet_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/view_profile_modify_bottom_sheet_1" />

    <View
        android:id="@+id/view_profile_modify_bottom_sheet_2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="19dp"
        android:layout_marginTop="18dp"
        android:background="@color/peeka_g_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_profile_modify_bottom_sheet_camera" />

    <TextView
        android:id="@+id/tv_profile_modify_bottom_sheet_basic"
        style="@style/H2Md"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="19dp"
        android:layout_marginVertical="18dp"
        android:gravity="center"
        android:text="@string/profile_modify_delete"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view_profile_modify_bottom_sheet_2" />


</androidx.constraintlayout.widget.ConstraintLayout>