<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.sopt.peekabookaos.presentation.withdraw.WithdrawViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/peeka_beige"
        tools:context=".presentation.withdraw.WithdrawActivity">

        <ImageButton
            android:id="@+id/btn_withdraw_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:background="@null"
            android:src="@drawable/ic_back"
            app:layout_constraintBottom_toBottomOf="@id/tv_withdraw_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_withdraw_title" />

        <TextView
            android:id="@+id/tv_withdraw_title"
            style="@style/H3Bd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:text="@string/withdraw_title"
            android:textColor="@color/peeka_red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view_withdraw"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginHorizontal="20dp"
            android:background="@color/peeka_red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_withdraw_back" />

        <ImageView
            android:id="@+id/iv_withdraw_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_withdraw_delete"
            app:layout_constraintBottom_toTopOf="@id/tv_withdraw_content"
            app:layout_constraintEnd_toEndOf="@id/view_withdraw"
            app:layout_constraintStart_toStartOf="@id/view_withdraw"
            app:layout_constraintTop_toBottomOf="@id/view_withdraw"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/tv_withdraw_content"
            style="@style/H2Md"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/withdraw_content"
            android:textColor="@color/peeka_red"
            app:layout_constraintBottom_toTopOf="@id/btn_withdraw_confirm"
            app:layout_constraintEnd_toEndOf="@id/iv_withdraw_delete"
            app:layout_constraintStart_toStartOf="@id/iv_withdraw_delete"
            app:layout_constraintTop_toBottomOf="@id/iv_withdraw_delete" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_withdraw_confirm"
            style="@style/NameBd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:background="@color/peeka_red"
            android:onClick="@{() -> vm.deleteUser()}"
            android:paddingVertical="15dp"
            android:text="@string/withdraw_confirm"
            android:textColor="@color/peeka_white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/view_withdraw"
            app:layout_constraintStart_toStartOf="@id/view_withdraw" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>